--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "django (>=5.2,<6.0)"
+    "fastapi (>=0.115.12,<0.116.0)"
 ]
 
 
