--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,12 +8,14 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastapi (>=0.115.12,<0.116.0)"
 ]
 
 [tool.poetry]
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.115.12"
+uvicorn = "^0.34.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
