--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.9",
     "langchain>=0.3.24",
     "langchain-openai>=0.3.15",
+    "langchain-qdrant>=0.2.0",
     "pydantic>=2.11.4",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
