--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -3,12 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
-  },
-  "include": [
-    "src"
-  ],
+  }
 }
